Use https for google maps script

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="shortcut icon" href="sites/stories.digitalartscorps.org/files/pixel_favicon.ico" type="image/x-icon" />
-<script type="text/javascript" src="http://maps.google.co.uk/maps/api/js?sensor=false"></script>
+<script type="text/javascript" src="https://maps.google.co.uk/maps/api/js?sensor=false"></script>
 		<link type="text/css" rel="stylesheet" media="all" href="modules/node/node.css%3Fd.css" />
 <link type="text/css" rel="stylesheet" media="all" href="modules/system/defaults.css%3Fd.css" />
 <link type="text/css" rel="stylesheet" media="all" href="modules/system/system.css%3Fd.css" />
